--- a/scripts python rbnb/config.json
+++ b/scripts python rbnb/config.json
@@ -1,5 +1,5 @@
 {
-    "tenant_id": "a2e466aa-4f86-4545-b5b8-97da7c8febf3",
+    "tenant_id": "",
     "client_id_sp2": "3b746a64-6aa7-4411-a28d-9cbe3e27f6e8",
     "client_secret_sp2": "0qH8Q~GT8n_XaM1QFcE5dl.qwaUrjWhcfpYZ9dwL",
     "key_vault_url": "https://hdkeysvault.vault.azure.net/",
