ajustement données sensibles

--- a/scripts python hugging/.env
+++ b/scripts python hugging/.env
@@ -1,4 +1,4 @@
-TENANT_ID=a2e466aa-4f86-4545-b5b8-97da7c8febf3
+TENANT_ID=
 CLIENT_ID_SP2=3b746a64-6aa7-4411-a28d-9cbe3e27f6e8
 CLIENT_SECRET_SP2=0qH8Q~GT8n_XaM1QFcE5dl.qwaUrjWhcfpYZ9dwL
 KEY_VAULT_URL=https://hdkeysvault.vault.azure.net/
